--- a/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
+++ b/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
@@ -188,5 +188,14 @@
   <ItemGroup>
     <None Include="Resources\Bed2_cream.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bed2_cream_h.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bed3_grey_h.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bed4_kid_h.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
