--- a/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
+++ b/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
@@ -72,6 +72,12 @@
     <Compile Include="room_previeww.Designer.cs">
       <DependentUpon>room_previeww.cs</DependentUpon>
     </Compile>
+    <Compile Include="TempChoose.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TempChoose.Designer.cs">
+      <DependentUpon>TempChoose.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BedChoose.resx">
       <DependentUpon>BedChoose.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="room_previeww.resx">
       <DependentUpon>room_previeww.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TempChoose.resx">
+      <DependentUpon>TempChoose.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
