room_pre image added

--- a/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
+++ b/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
@@ -344,5 +344,8 @@
   <ItemGroup>
     <None Include="Resources\clock4_cuckoo_h.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\room_pre.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
