f'd up movement idk why

--- a/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
+++ b/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
@@ -347,5 +347,8 @@
   <ItemGroup>
     <None Include="Resources\room_pre.PNG" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\room_pre_blur.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
