--- a/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
+++ b/Ma-Norn-Duay-Gun-Mai/Ma-Norn-Duay-Gun-Mai.csproj
@@ -356,5 +356,8 @@
   <ItemGroup>
     <None Include="Resources\title_holder_bland.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\highlight_ex_mouse.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
